--- a/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
+++ b/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
@@ -10,10 +10,8 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/dataTables")
     @Scripts.Render("~/bundles/moment")
-    @Scripts.Render("~/bundles/iziModal")
-    @Scripts.Render("~/bundles/popper")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/mdb")
+    @Scripts.Render("~/bundles/fileExport")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
