--- a/TextileResearchDevelopment/Views/Stenter/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Stenter/Index.cshtml
@@ -21,7 +21,7 @@
     </style>
 </head>
 
-<h2>Dyeing Entry Form</h2>
+<h2>Stenter Entry Form</h2>
 
 <div id="MainDiv" class="panel panel-default ">
     <ul id="MainContextMenu" class="dropdown-menu" role="menu" style="display:none">
