--- a/TextileResearchDevelopment/Views/Dyeing/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Dyeing/Index.cshtml
@@ -232,7 +232,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <table id="knitSelectionTable" class="stripe hover order-column" style="width: 100%">
+                            <table id="knitSelectionTable" class="display nowrap stripe hover order-column" style="width: 100%">
                                 <thead>
                                     <tr>
                                         <th></th>
@@ -417,7 +417,7 @@
         </div>
     </div>
 
-    <table id="DyeingTable" class="stripe hover order-column " style="width: 1000px;">
+    <table id="DyeingTable" class="display nowrap" style="width: 100%;">
         <thead>
             <tr>
                 <th></th>
@@ -680,7 +680,22 @@
             selectedKnitRowId = 0;
 
             knitSelectionTable = $('#knitSelectionTable').DataTable({
-                "dom": 'Bfrtip',
+                dom: 'Bfrtip',
+                buttons: [
+                    {
+                        extend: 'excelHtml5',
+                        exportOptions: {
+                            columns: ':visible'
+                        }
+                    },
+                    {
+                        extend: 'pdfHtml5',
+                        exportOptions: {
+                            columns: ':visible'
+                        }
+                    },
+                    'colvis'
+                ],
                 "scrollY": true,
                 "scrollX": true,
                 "Sorting": true,
@@ -827,6 +842,22 @@
         });
 
         var DyeingTable = $('#DyeingTable').DataTable({
+            dom: 'Bfrtip',
+            buttons: [
+                {
+                    extend: 'excelHtml5',
+                    exportOptions: {
+                        columns: ':visible'
+                    }
+                },
+                {
+                    extend: 'pdfHtml5',
+                    exportOptions: {
+                        columns: ':visible'
+                    }
+                },
+                'colvis'
+            ],
             "ajax":
             {
                 "url": "/Dyeing/GetData",
@@ -840,8 +871,8 @@
             "searching": true,
             "destroy": true,
             "select": {
-                    style: 'single'
-                },
+                style: 'single'
+            },
             "columnDefs": [
                 {
                     "targets": [0],
@@ -943,8 +974,7 @@
                 var rowdata = DyeingTable.row(this).data();
             }
 
-            if (DyeingTable.data().any())
-            {
+            if (DyeingTable.data().any()) {
                 Setvalue(rowdata);
                 $('#saveBtn').prop("disabled", true);
                 $('#updateBtn').prop("disabled", false);
