--- a/TextileResearchDevelopment/Views/UserManagement/Index.cshtml
+++ b/TextileResearchDevelopment/Views/UserManagement/Index.cshtml
@@ -71,8 +71,8 @@
         </div>
     </div>
 
-    <button class="btn btn-danger btn-sm" style="width:10%;" id="deleteBtn">Delete Row</button>
-    <table id="UserTable" class="stripe hover order-column " style="width: 1000px;">
+    <button class="btn btn-danger btn-sm" style="width:10%; margin-bottom:15px;" id="deleteBtn">Delete Row</button>
+    <table id="UserTable" class="display nowrap stripe hover order-column " style="width: 1000px;">
         <thead>
             <tr>
                 <th></th>
@@ -100,6 +100,22 @@
         debugger;
         var PermissionString = "";
         var UserTable = $('#UserTable').DataTable({
+            dom: 'Bfrtip',
+            buttons: [
+                {
+                    extend: 'excelHtml5',
+                    exportOptions: {
+                        columns: ':visible'
+                    }
+                },
+                {
+                    extend: 'pdfHtml5',
+                    exportOptions: {
+                        columns: ':visible'
+                    }
+                },
+                'colvis'
+            ],
             "ajax":
             {
                 "url": "/UserManagement/GetData",
